Working on page translations.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -79,5 +79,104 @@
     "cancel": "Cancel",
     "restore": "Restore",
     "hide": "Hide"
+  },
+  "deviceGroupPage": {
+    "heading": "Group:",
+    "id": "ID",
+    "displays": "Displays",
+    "microcode": "Microcode version",
+    "timezone": "Timezone",
+    "name": "Name",
+    "location": "Location",
+    "notSet": "Not set",
+    "useLocation": "Use my location",
+    "save": "Save",
+    "cancel": "Cancel",
+    "noDevices": "No devices in this group.",
+    "lastUpdated": "Last updated"
+  },
+  "devicePrograms": {
+    "heading": "Programs for device",
+    "back": "Back",
+    "addProgram": "Add Program",
+    "noPrograms": "No programs defined",
+    "untitled": "Untitled",
+    "classLabel": "Class",
+    "activeLabel": "Active",
+    "yes": "Yes",
+    "no": "No",
+    "confirmDelete": "Confirm delete",
+    "delete": "Delete"
+  },
+  "deviceProgramArgsEditor": {
+    "activationInitiale": "Initial activation",
+    "horaire": "Schedule",
+    "etat": "State",
+    "off": "OFF",
+    "on": "ON",
+    "heure": "Hour",
+    "minute": "Minute",
+    "jour": "Day",
+    "none": "None",
+    "sunday": "Sunday",
+    "monday": "Monday",
+    "tuesday": "Tuesday",
+    "wednesday": "Wednesday",
+    "thursday": "Thursday",
+    "friday": "Friday",
+    "saturday": "Saturday",
+    "solaire": "Solar",
+    "sunset": "Sunset",
+    "dusk": "Dusk",
+    "noon": "Noon",
+    "dawn": "Dawn",
+    "sunrise": "Sunrise",
+    "remove": "Remove",
+    "addSchedule": "Add Schedule",
+    "senseurs": "Sensors",
+    "humidityTarget": "Humidity target",
+    "precision": "Precision",
+    "dureeOffMin": "Duration off (min)",
+    "dureeOnMin": "Duration on (min)",
+    "temperature": "Temperature",
+    "unsupportedClass": "Unsupported program class"
+  },
+  "deviceProgramsEdit": {
+    "editHeader": "Edit Program for {{group}} / {{device}}",
+    "addHeader": "Add Program for {{group}} / {{device}}",
+    "descriptionLabel": "Description",
+    "classLabel": "Class",
+    "selectClass": "Select class",
+    "classOptions": {
+      "horaireHebdomadaire": "Horaire Hebdomadaire",
+      "humidificateur": "Humidificateur",
+      "chauffage": "Chauffage",
+      "climatisation": "Climatisation"
+    },
+    "activeLabel": "Active",
+    "save": "Save",
+    "cancel": "Cancel"
+  },
+  "programsPage": {
+    "title": "All Programs",
+    "note": "Note:",
+    "noteText": "to add a new program, go to a switch device and click the Programs button.",
+    "noPrograms": "No programs defined.",
+    "untitled": "Untitled",
+    "classLabel": "Class",
+    "activeLabel": "Active",
+    "yes": "Yes",
+    "no": "No",
+    "groupLabel": "Group",
+    "confirmDelete": "Confirm delete",
+    "delete": "Delete"
+  },
+  "noticesPage": {
+    "noPendingRegistrations": "No pending registrations.",
+    "microcode": "Microcode",
+    "pendingRegistration": "Pending registration",
+    "code": "Code",
+    "confirm": "Confirm",
+    "register": "Register"
   }
 }
