Translations for devicesFilterHidden.

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -208,5 +208,9 @@
     "samplePage": "Sample page",
     "save": "Save",
     "cancel": "Cancel"
+  },
+  "devicesFilterHidden": {
+    "title": "Hidden and deleted devices",
+    "noHiddenDevices": "No devices are hidden."
   }
 }
