Settings page translation

--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -275,5 +275,10 @@
       "on": "ON",
       "off": "OFF"
     }
+  },
+  "settingsPage": {
+    "title": "Paramètres généraux",
+    "timezoneLabel": "Fuseau horaire",
+    "currentSelection": "Sélection actuelle : {{timezone}}"
   }
 }
