--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -275,5 +275,10 @@
       "on": "ON",
       "off": "OFF"
     }
+  },
+  "settingsPage": {
+    "title": "General settings",
+    "timezoneLabel": "Time zone",
+    "currentSelection": "Current selection: {{timezone}}"
   }
 }
